# rust-micrograd

./: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
config/: nginx.conf.erb
micrograd/: Cargo.toml
micrograd/src/: avalue.rs  lib.rs  neuron.rs  value.rs
src/: App.tsx  index.css  index.ts  main.tsx
src/components/: PlaybackControls.tsx  Playground.tsx  PresetSelector.tsx
src/components/nodes/: Operation.tsx  Scalar.tsx  index.tsx
src/context/: Playground.tsx
src/data/: value.ts
src/lib/: helpers.ts
